<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">ImageToPDF</string>
    <string name="home_subtitle">Работа с изображениями и PDF</string>
    <string name="tools_title">Инструменты</string>
    <string name="all_tools_title">Все инструменты</string>
    <string name="tool_coming_soon">Скоро</string>
    <string name="tool_coming_soon_content_description">%1$s, скоро появится</string>
    <string name="tool_image_to_pdf">Изображение в PDF</string>
    <string name="tool_smart_scan">Сканировать документ</string>
    <string name="tool_smart_scan_description">Сфотографируйте страницы и создайте PDF</string>
    <string name="tool_title_with_description">%1$s. %2$s</string>
    <string name="tool_import_pdf">Импорт PDF</string>
    <string name="tool_compress_pdf">Сжать PDF</string>
    <string name="tool_pdf_to_jpg">PDF в JPG</string>
    <string name="tool_merge_pdf">Слияние PDF</string>
    <string name="tool_camera">Камера</string>
    <string name="tool_more">Ещё</string>
    <string name="tool_docx_to_pdf">DOCX в PDF</string>
    <string name="tool_ppt_to_pdf">PPT в PDF</string>
    <string name="tool_pdf_to_word">PDF в Word</string>
    <string name="tool_pdf_to_ppt">PDF в PPT</string>
    <string name="tool_id_scan">Скан удостоверения</string>
    <string name="tool_print_pdf">Печать PDF</string>
    <string name="tool_draw_on_pdf">Рисовать</string>
    <string name="tool_add_text">Добавить текст</string>
    <string name="tool_sign_pdf">Подпись</string>
    <string name="tool_lock_pdf">Заблокировать PDF</string>
    <string name="tool_unlock_pdf">Разблокировать PDF</string>
    <string name="tool_category_create_convert">Создать и преобразовать</string>
    <string name="tool_category_popular">Популярные</string>
    <string name="tool_category_edit">Изменить PDF</string>
    <string name="tool_category_security">Безопасность</string>
    <string name="all_tools_content_description">Каталог PDF-инструментов</string>
    <string name="action_all_tools_back_content_description">Вернуться на главный экран</string>
    <string name="main_description">Выберите изображения и объедините их в один PDF</string>
    <string name="action_select_images">Выбрать изображения</string>
    <string name="action_take_photo">Сфотографировать</string>
    <string name="action_add_images">Добавить изображения</string>
    <string name="action_back">Назад</string>
    <string name="action_add">Добавить</string>
    <string name="action_editor_back_content_description">Вернуться на главный экран</string>
    <string name="action_add_page_content_description">Добавить изображения</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_create_pdf">Создать PDF</string>
    <string name="editor_selected_page_counter">%1$d из %2$d</string>
    <string name="action_cancel_pdf_generation">Отменить</string>
    <string name="action_open_pdf">Открыть PDF</string>
    <string name="action_share_pdf">Поделиться</string>
    <string name="action_new_document">Создать новый</string>
    <string name="action_previous_page">Предыдущая</string>
    <string name="action_next_page">Следующая</string>
    <string name="action_rotate">Повернуть</string>
    <string name="action_reset">Сброс</string>
    <string name="action_rotate_left">Влево</string>
    <string name="action_rotate_right">Вправо</string>
    <string name="action_crop">Обрезать</string>
    <string name="action_document">Документ</string>
    <string name="action_done">Готово</string>
    <string name="action_apply">Применить</string>
    <string name="action_page_edit_back_content_description">Вернуться к списку страниц</string>
    <string name="action_page_edit_reset_content_description">Сбросить изменения страницы</string>
    <string name="action_crop_cancel_content_description">Отменить обрезку</string>
    <string name="action_crop_reset_content_description">Сбросить рамку обрезки</string>
    <string name="action_rotate_left_content_description">Повернуть страницу влево</string>
    <string name="action_rotate_right_content_description">Повернуть страницу вправо</string>
    <string name="action_crop_content_description">Обрезать страницу</string>
    <string name="action_document_content_description">Открыть коррекцию документа</string>
    <string name="action_done_content_description">Завершить редактирование</string>
    <string name="action_apply_content_description">Применить изменения</string>
    <string name="action_cancel_content_description">Отменить изменения</string>
    <string name="pdf_settings_title">Настройки PDF</string>
    <string name="pdf_page_size_label">Размер страницы</string>
    <string name="pdf_image_placement_label">Размещение</string>
    <string name="pdf_margin_label">Поля</string>
    <string name="pdf_page_size_a4">A4</string>
    <string name="pdf_page_size_image">По изображению</string>
    <string name="pdf_image_placement_fit">Вписать</string>
    <string name="pdf_image_placement_fill">Заполнить</string>
    <string name="pdf_margin_none">Без полей</string>
    <string name="pdf_margin_small">Небольшие</string>
    <string name="pdf_margin_standard">Стандартные</string>
    <string name="pdf_page_size_content_description">Выбор размера страницы PDF</string>
    <string name="pdf_image_placement_content_description">Выбор размещения изображения на странице PDF</string>
    <string name="pdf_margin_content_description">Выбор полей PDF</string>
    <string name="action_rotate_page_content_description">Повернуть страницу %1$d по часовой стрелке</string>
    <string name="action_delete_page_content_description">Удалить страницу %1$d</string>
    <string name="action_reorder_page_content_description">Изменить порядок страницы %1$d</string>
    <string name="action_reorder_page_content_description_generic">Изменить порядок страницы</string>
    <string name="action_rotate_page_content_description_generic">Повернуть страницу по часовой стрелке</string>
    <string name="action_delete_page_content_description_generic">Удалить страницу</string>
    <string name="action_move_page_up">Переместить выше</string>
    <string name="action_move_page_down">Переместить ниже</string>
    <string name="action_move_page_left">Переместить влево</string>
    <string name="action_move_page_right">Переместить вправо</string>
    <string name="page_position_announcement">Страница %1$d из %2$d</string>
    <string name="action_previous_page_content_description">Предыдущая страница</string>
    <string name="action_next_page_content_description">Следующая страница</string>
    <string name="action_rotate_preview_page_content_description">Повернуть страницу</string>
    <string name="action_close_page_preview_content_description">Закрыть просмотр</string>
    <string name="editor_title">Страницы</string>
    <string name="reorder_hint">Тяните за точки или удерживайте страницу</string>
    <string name="page_number_label">%1$d</string>
    <string name="page_thumbnail_content_description">Открыть страницу %1$d</string>
    <string name="page_thumbnail_content_description_generic">Открыть страницу</string>
    <string name="page_preview_title">%1$d из %2$d</string>
    <string name="page_preview_image_content_description">Предпросмотр страницы %1$d</string>
    <string name="page_preview_image_content_description_generic">Предпросмотр страницы</string>
    <string name="page_edit_title">Страница %1$d</string>
    <string name="page_edit_crop_title">Обрезка</string>
    <string name="page_edit_document_title">Документ</string>
    <string name="page_edit_counter">%1$d / %2$d</string>
    <string name="page_edit_image_content_description">Редактируемая страница %1$d</string>
    <string name="page_edit_image_content_description_generic">Редактируемая страница</string>
    <string name="page_edit_strip_content_description">Страницы документа</string>
    <string name="page_edit_thumbnail_content_description">Перейти к странице %1$d</string>
    <string name="crop_overlay_content_description">Область прямоугольной обрезки с восемью управляющими точками</string>
    <string name="document_overlay_content_description">Контур документа с четырьмя углами и четырьмя точками рёбер</string>
    <string name="document_corner_top_left">Верхний левый угол</string>
    <string name="document_corner_top_right">Верхний правый угол</string>
    <string name="document_corner_bottom_left">Нижний левый угол</string>
    <string name="document_corner_bottom_right">Нижний правый угол</string>
    <string name="document_corner_position_description">%1$s. Положение: по горизонтали %2$d%%, по вертикали %3$d%%.</string>
    <string name="document_corner_move_left">Переместить влево</string>
    <string name="document_corner_move_right">Переместить вправо</string>
    <string name="document_corner_move_up">Переместить вверх</string>
    <string name="document_corner_move_down">Переместить вниз</string>
    <string name="add_page_source_title">Добавить страницу</string>
    <string name="add_page_source_gallery">Из галереи</string>
    <string name="add_page_source_camera">Сфотографировать</string>
    <string name="image_source_title_new_document">Добавить изображения</string>
    <string name="image_source_title_append">Добавить страницу</string>
    <string name="image_source_gallery">Из галереи</string>
    <string name="action_add_from_gallery">Добавить из галереи</string>
    <string name="image_source_gallery_subtitle">Выберите изображения из галереи</string>
    <string name="image_source_camera">Сфотографировать</string>
    <string name="image_source_camera_subtitle">Сделайте фото камерой устройства</string>
    <string name="image_source_files">Проводник</string>
    <string name="image_source_files_subtitle">Найдите изображения в файлах и папках</string>
    <string name="source_gallery_content_description">Выбрать изображения из галереи</string>
    <string name="source_camera_content_description">Сфотографировать</string>
    <string name="source_files_content_description">Открыть проводник</string>
    <string name="status_no_images_selected">Изображения не выбраны</string>
    <string name="status_camera_app_not_found">Не найдено приложение камеры</string>
    <string name="status_camera_destination_error">Не удалось подготовить файл для фотографии</string>
    <string name="status_camera_empty_file">Не удалось сохранить фотографию</string>
    <string name="status_save_location_cancelled">Сохранение отменено</string>
    <string name="status_pdf_generating">Создание PDF…</string>
    <string name="status_pdf_generation_progress">Создание PDF: %1$d из %2$d</string>
    <string name="status_pdf_creation_error">Не удалось создать PDF</string>
    <string name="status_page_edit_load_error">Не удалось открыть страницу</string>
    <string name="pdf_export_title">Создать PDF</string>
    <string name="pdf_export_file_name_label">Имя файла</string>
    <string name="pdf_export_file_name_helper">Расширение .pdf будет добавлено автоматически</string>
    <string name="pdf_export_quality_label">Качество</string>
    <string name="pdf_quality_compact">Компактный</string>
    <string name="pdf_export_orientation_label">Ориентация</string>
    <string name="pdf_orientation_auto">Автоматически</string>
    <string name="pdf_orientation_portrait">Книжная</string>
    <string name="pdf_orientation_landscape">Альбомная</string>
    <string name="action_convert_pdf">Конвертировать</string>
    <string name="action_close_pdf_export_content_description">Закрыть параметры экспорта PDF</string>
    <string name="action_clear_pdf_name_content_description">Очистить имя PDF</string>
    <string name="action_select_pdf_quality_content_description">Выбрать качество PDF</string>
    <string name="action_convert_pdf_content_description">Конвертировать изображения в PDF</string>
</resources>